--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     ],
 		"paths": {
 			"@layout": ["src/app/layout/index.ts"],
+			"@shared*": ["src/app/shared/*"],
 		}
   },
   "angularCompilerOptions": {
