feat: add tab, rule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,7 @@
   },
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "IDX.aI.enableInlineCompletion": true,
+  "IDX.aI.enableCodebaseIndexing": true
 }
