--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,9 @@
       "dom"
     ],
 		"paths": {
-			"@layout": ["src/app/layout/index.ts"],
-			"@shared*": ["src/app/shared/*"],
+      "@layout": ["src/app/layout/index.ts"],
+      "@shared/*": ["src/app/shared/*"],
+      "@feature/*": ["src/app/feature/*"],
 		}
   },
   "angularCompilerOptions": {
