--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,7 @@ jobs:
         run: npm ci
 
       - name: Build production
+        run: npm run build:prod
+
+      - name: Deploy
         run: npm run ng -- deploy --no-silent
