chore: update angular json deploy option

--- a/angular.json
+++ b/angular.json
@@ -113,6 +113,7 @@
 				"deploy": {
 					"builder": "angular-cli-ghpages:deploy",
 					"options": {
+						"dir": "dist/drm-revision",
 						"baseHref": "/drm-revision/",
 						"name": "young",
 						"email": "stupid80096@gmal.com"
